[gd_scene load_steps=8 format=1]

[ext_resource path="res://loan_shark.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://blacker_than_night.png" type="Texture" id=3]
[ext_resource path="res://game_background.png" type="Texture" id=4]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=5]
[ext_resource path="res://lower.png" type="Texture" id=6]
[ext_resource path="res://raise.png" type="Texture" id=7]

[node name="loans" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( 0.0077858, 0.33674 )
transform/scale = Vector2( 0.0498035, 0.0916558 )
texture = ExtResource( 2 )

[node name="borrow_input_background_black" type="Sprite" parent="."]

transform/pos = Vector2( 6.00758, 7.73167 )
transform/scale = Vector2( 0.015581, 0.0134649 )
texture = ExtResource( 3 )

[node name="borrow_input_background_gray" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 5.99501, 7.73532 )
transform/scale = Vector2( 0.0110798, 0.0177652 )
texture = ExtResource( 4 )

[node name="payback_input_background_black" type="Sprite" parent="."]

transform/pos = Vector2( 6.04055, 16.6707 )
transform/scale = Vector2( 0.015581, 0.0134649 )
texture = ExtResource( 3 )

[node name="payback_input_background_gray" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 6.01649, 16.6973 )
transform/scale = Vector2( 0.0111235, 0.0178994 )
texture = ExtResource( 4 )

[node name="label" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.1, 0.2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -9.0
margin/top = -27.0
margin/right = 182.0
margin/bottom = 25.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Bank Loan"
visible_characters = -1

[node name="credit_limit" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -18.0
margin/top = -17.0
margin/right = 239.0
margin/bottom = 35.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Credit Limit:"
visible_characters = -1

[node name="credit_limit_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = -17.0
margin/right = 264.0
margin/bottom = 35.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="current_loan" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = -10.0
margin/right = 237.0
margin/bottom = 42.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Current Loan:"
visible_characters = -1

[node name="current_loan_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = -10.0
margin/right = 264.0
margin/bottom = 42.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="daily_interest" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = -4.0
margin/right = 237.0
margin/bottom = 49.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Daily Interest:"
visible_characters = -1

[node name="daily_interest_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = -3.0
margin/right = 264.0
margin/bottom = 49.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="borrow" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = 5.0
margin/right = 132.0
margin/bottom = 58.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Borrow:"
visible_characters = -1

[node name="borrow_lower" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 5.0
margin/right = 17.0
margin/bottom = 23.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="borrow_output_black" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 6.0
margin/right = 74.0
margin/bottom = 59.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="borrow_output_gray" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 6.0
margin/right = 74.0
margin/bottom = 59.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.800781, 0.800781, 0.800781, 1 )
custom_colors/selection_color = Color( 0.867188, 0.867188, 0.867188, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="borrow_raise" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 5.0
margin/right = 31.0
margin/bottom = 23.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pay_back" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -21.0
margin/top = 13.0
margin/right = 184.0
margin/bottom = 67.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Pay Back:"
visible_characters = -1

[node name="pack_back_lower" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 14.0
margin/right = 17.0
margin/bottom = 32.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pack_back_raise" type="TextureButton" parent="."]

rect/scale = Vector2( 0.2, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 11.0
margin/top = 14.0
margin/right = 31.0
margin/bottom = 32.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="pay_back_output_black" type="RichTextLabel" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 14.0
margin/right = 73.0
margin/bottom = 67.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="pay_back_output_gray" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.08, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 15.0
margin/right = 73.0
margin/bottom = 68.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0.828125, 0.828125, 0.828125, 1 )
bbcode/enabled = false
bbcode/bbcode = "0"
visible_characters = -1

[node name="debounce_borrow" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="debounce_payback" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="confirm" type="LinkButton" parent="."]

rect/scale = Vector2( 0.1, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -7.0
margin/top = 22.0
margin/right = 138.0
margin/bottom = 81.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "Confirm"
underline = 2

[connection signal="button_down" from="borrow_lower" to="." method="_on_borrow_lower_button_down"]

[connection signal="button_down" from="borrow_raise" to="." method="_on_borrow_raise_button_down"]

[connection signal="button_down" from="pack_back_lower" to="." method="_on_pack_back_lower_button_down"]

[connection signal="button_down" from="pack_back_raise" to="." method="_on_pack_back_raise_button_down"]

[connection signal="button_down" from="confirm" to="." method="_on_confirm_button_down"]


